# gnut

./: .gitignore  CMakeLists.txt  main.cpp
lib/glew/doc/: log.html
lib/glfw/docs/html/: glfw3_8h.html  glfw3_8h_source.html  group__window.html
res/models/: testpatch.off
res/shaders/: basic_lighting.frag  basic_lighting.vert  debug.frag  debug.vert  default.frag  default.vert  depth.vert  render_depth.frag  render_depth.vert  shadow_bump.frag  shadow_bump.vert  shadow_map.frag  shadow_map.vert  skybox.frag  skybox.vert
src/: color.h  logger.cpp  logger.h  macros.h  main.cpp  material.h  shader_program.cpp  shader_program.h
src/gfx/: Skybox.h  color.cpp  color.h  depth_map.cpp  depth_map.h  ground.cpp  ground.h  material.cpp  material.h  mesh.cpp  mesh.h  mesh_loader.cpp  mesh_loader.h  shader.cpp  shader.h  shader_program.cpp  shader_program.h  skybox.cpp
src/tools/log/: console.cpp  console.h  file_stream.cpp  file_stream.h  log.h  log_stream.h  logfile.cpp  logfile.h  logger.cpp  logger.h  rotating_logfile.cpp  rotating_logfile.h
src/util/: compile_flags.h  console_stream.cpp  console_stream.h  grid.cpp  grid.h  log_stream.h  logger.cpp  logger.h  macros.h  utility.cpp  utility.h
